2005-07-18  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: check system has
	  libgnomeprintui/gnome-print-config-dialog.h header or not.

	* src/rbgpui-print-config-dialog.c: disable if system doesn't have
	  libgnomeprintui/gnome-print-config-dialog.h header.

2005-06-12  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb (mkenums): kept $makefile_created value.

	* extconf.rb: fixed enum types handling.
	* src/rbgpui-print-dialog.c: ditto.
	* src/rbgpui-print-paper-selector.c: ditto.

	* src/libgnomeprintui-enum-types.c.maintainer: updated.
	* src/libgnomeprintui-enum-types.h.maintainer: updated.
	
	* extconf.rb: added libgnomeprintui/ prefix to
	  "#{enum_type_prefix}.h".

2005-06-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgpui-print-paper-selector.c (gpui_paper_selector_new):
	  check nil or not instead of number of arguments.

	* src/rbgpui-print-paper-selector.c (gpui_paper_selector_new):
	  all arguments are optional.

	* extconf.rb: added Ruby/GnomePrint to depend packages.

	* src/rbgpui-print-unit-selector.c: use Ruby/GnomePrint API.

	* src/rbgpui-print-preview.c (gpui_preview_new): implemented
	  gnome_print_preview_new_full().

	* extconf.rb: added Ruby/Libart2 to depend packages.

	* sample/dialog.rb (Renderer#dialog): added sample of
	  Gnome::PrintDialog#construct_range_page.

	* src/rbgpui-print-dialog.c
	  (gpui_dialog_construct_range_custom): implemented.
	  (gpui_dialog_construct_range_any): ditto.
	  (gpui_dialog_construct_range_page): ditto.
	
	* src/rbgpui-print-dialog.c (gpui_dialog_get_range): returned
	  Gnome::PrintDialog::RangeFlags instead of
	  Gnome::PrintDialog::RangeType. (perhaps this is a bug of
	  libgnomeprintui)

	* src/rbgpui-print-dialog.c (gpui_dialog_get_range_page):
	  returned bit mask too.

	* src/rbgpui-print-dialog.c (gpui_dialog_new): all arguments are
	  optional.

	* src/rbgpui-print-dialog.c (gpui_dialog_set_copies): fixed
	  invalid argument handling bug.

2005-06-09  Kouhei Sutou  <kou@cozmixng.org>
