@@ -22,11 +22,11 @@
 #include <libgnomeprintui/gnome-print-dialog.h>
 
 #define _SELF(self) (RVAL2GOBJ(self))
-#define RVAL2GPDF(obj) (RVAL2GFLAGS(obj, GNOME_TYPE_PRINTUI_PRINT_DIALOG_FLAGS))
-#define RVAL2GPDRF(obj) (RVAL2GFLAGS(obj, GNOME_TYPE_PRINTUI_PRINT_DIALOG_RANGE_FLAGS))
-#define GPRT2RVAL(obj) (GENUM2RVAL(obj, GNOME_TYPE_PRINTUI_PRINT_RANGE_TYPE))
-#define GPRF2RVAL(obj) (GENUM2RVAL(obj, GNOME_TYPE_PRINTUI_PRINT_DIALOG_RANGE_FLAGS))
-#define GPDR2RVAL(obj) (GENUM2RVAL(obj, GNOME_TYPE_PRINTUI_PRINT_BUTTONS))
+#define RVAL2GPDF(obj) (RVAL2GFLAGS(obj, GNOME_TYPE_PRINT_PRINT_DIALOG_FLAGS))
+#define RVAL2GPDRF(obj) (RVAL2GFLAGS(obj, GNOME_TYPE_PRINT_PRINT_DIALOG_RANGE_FLAGS))
+#define GPRT2RVAL(obj) (GENUM2RVAL(obj, GNOME_TYPE_PRINT_PRINT_RANGE_TYPE))
+#define GPRF2RVAL(obj) (GENUM2RVAL(obj, GNOME_TYPE_PRINT_PRINT_DIALOG_RANGE_FLAGS))
+#define GPDR2RVAL(obj) (GENUM2RVAL(obj, GNOME_TYPE_PRINT_PRINT_BUTTONS))
 
 static VALUE
 gpui_dialog_new(int argc, VALUE *argv, VALUE self)
@@ -141,17 +141,17 @@ Init_gnome_print_dialog(VALUE mGnome)
   VALUE c = G_DEF_CLASS(GNOME_TYPE_PRINT_DIALOG, "PrintDialog", mGnome);
 
   /* GnomePrintRangeType */
-  G_DEF_CLASS(GNOME_TYPE_PRINTUI_PRINT_RANGE_TYPE, "RangeType", c);
-  G_DEF_CONSTANTS(c, GNOME_TYPE_PRINTUI_PRINT_RANGE_TYPE, "GNOME_PRINT_");
+  G_DEF_CLASS(GNOME_TYPE_PRINT_PRINT_RANGE_TYPE, "RangeType", c);
+  G_DEF_CONSTANTS(c, GNOME_TYPE_PRINT_PRINT_RANGE_TYPE, "GNOME_PRINT_");
   /* GnomePrintDialogRangeFlags */
-  G_DEF_CLASS(GNOME_TYPE_PRINTUI_PRINT_DIALOG_RANGE_FLAGS, "RangeFlags", c);
-  G_DEF_CONSTANTS(c, GNOME_TYPE_PRINTUI_PRINT_DIALOG_RANGE_FLAGS, "GNOME_PRINT_");
+  G_DEF_CLASS(GNOME_TYPE_PRINT_PRINT_DIALOG_RANGE_FLAGS, "RangeFlags", c);
+  G_DEF_CONSTANTS(c, GNOME_TYPE_PRINT_PRINT_DIALOG_RANGE_FLAGS, "GNOME_PRINT_");
   /* GnomePrintDialogFlags */
-  G_DEF_CLASS(GNOME_TYPE_PRINTUI_PRINT_DIALOG_FLAGS, "Flags", c);
-  G_DEF_CONSTANTS(c, GNOME_TYPE_PRINTUI_PRINT_DIALOG_FLAGS, "GNOME_PRINT_DIALOG_");
+  G_DEF_CLASS(GNOME_TYPE_PRINT_PRINT_DIALOG_FLAGS, "Flags", c);
+  G_DEF_CONSTANTS(c, GNOME_TYPE_PRINT_PRINT_DIALOG_FLAGS, "GNOME_PRINT_DIALOG_");
   /* GnomePrintButtons */
-  G_DEF_CLASS(GNOME_TYPE_PRINTUI_PRINT_BUTTONS, "Response", c);
-  G_DEF_CONSTANTS(c, GNOME_TYPE_PRINTUI_PRINT_BUTTONS, "GNOME_PRINT_DIALOG_");
+  G_DEF_CLASS(GNOME_TYPE_PRINT_PRINT_BUTTONS, "Response", c);
+  G_DEF_CONSTANTS(c, GNOME_TYPE_PRINT_PRINT_BUTTONS, "GNOME_PRINT_DIALOG_");
   
               
   rb_define_method(c, "initialize", gpui_dialog_new, -1);
